# sequoia-diff

./: .gitignore  ExampleClass.java  ExampleClassAfterChange.java  README.md  pyproject.toml  requirements.txt  run_tests.sh  sequoia_diff_testing_script.py  test.py
.trunk/: trunk.yaml
sequoia_diff/: __init__.py  actions.py  loaders.py  matching.py  models.py  rules.json  rules.yaml  string_comparisons.py  types.py
tests/: apted.py.old  test_actions.py  test_line_match.py  test_models.py  test_sequoia_diff.py  test_string_comparisons.py  util.py
tests/data/test_sequoia_diff/: 0_actions.yaml  0_mappings.txt
tests/data/test_sequoia_diff/0/: actions.yaml  mappings.yaml
tests/data/test_sequoia_diff/1/: actions.yaml  after.java  before.java  mappings.yaml
tests/data/test_sequoia_diff/1_reversed/: actions.yaml  mappings.yaml
tests/data/test_sequoia_diff/2/: actions.yaml  after.java  before.java  mappings.yaml
tests/data/test_sequoia_diff/3/: actions.yaml  after.java  before.java  mappings.yaml
