[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sequoia_diff"
version = "0.0.1"
dependencies = [
  "tree-sitter==0.20.4",
  "requests",
  'importlib-metadata; python_version<"3.10"',
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
sequoia_diff = ["rules.yaml"]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["sequoia_diff*"]  # ["*"] by default
exclude = ["tests*"]  # empty by default
namespaces = true  # true by default