[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sequoia_diff"
version = "0.0.9"
authors = [{ name = "Jonah Sussman", email = "sussmanjonah@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
  "tree-sitter>=0.22.3,<1",
  "pydantic>=2.8.2,<3",
  # "requests",
  # 'importlib-metadata; python_version<"3.10"',
]

[project.optional-dependencies]
dev = [
  "PyYAML==6.0.1",
  "coverage",
  "mypy[mypyc]",
  "types-PyYAML",
  "tree-sitter-java==0.21.0",
]

[project.urls]
Homepage = "https://github.com/JonahSussman/sequoia-diff"
Issues = "https://github.com/JonahSussman/sequoia-diff/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
sequoia_diff = ["rules.json", "py.typed"]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]               # ["."] by default
include = ["sequoia_diff*"] # ["*"] by default
exclude = ["tests*"]        # empty by default
namespaces = true           # true by default
